# Multi-Session-Chat-App

./: .gitignore  LICENSE  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 1f8d70a93519_add_default_uuid_to_chat_session_.py  b7b7ca14b957_add_chat_app_tables_to_test_schema.py
src/: dependency.py  main.py
src/api/: __init__.py  chat.py  user.py
src/core/: __init__.py  settings.py
src/db/: __init__.py  db_adapter.py  postgres.py  schema.py
src/schema/: __init__.py
src/schema/chat_api/: request.py  response.py
src/service/: __init__.py  chat_service.py  user_service.py
