[project]
name = "multi-session-chat-app"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.128.8",
    "fastmcp>=2.14.5",
    "langchain>=1.2.10",
    "langgraph>=1.0.8",
    "orjson>=3.11.7",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "qdrant-client>=1.16.2",
    "sqlalchemy[asyncio]>=2.0.46",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
